# webpage-scraper

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  marketplaces.py  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  clean_proposal.md  enhancement_proposal.md  feature_proposal.md  feature_request.md  problem_report.md  question.md  refactor_proposal.md
.github/workflows/: python-deployment.yml  python-publish.yml  python-test.yml  python-update.yml  python_test.yml  python_update.yml
ISSUE_TEMPLATE/: bug_report.md
app/: utility.py
app/pages/: search_page.py  search_text_page.py  search_url_page.py  sku_page.py  sku_url_page.py
pages/: 00_🇦_search_page.py  01_🔗_search_page.py  02_🔗_sku_page.py  09_🔍_sku.py  10_🔍_query.py  search_page.py  sku_page.py  🇦_search_page.py  🔗_search_page.py  🔗_sku_page.py
utility/: marketplaces.py  rabbit.py
