[project]
name = "webpage-scraper"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "streamlit>=1.11.0",
    "structlog>=22.1.0",
    "page-infra @ git+https://github.com/la-catalog/page-infra.git",
    "rabbit-models @ git+https://github.com/la-catalog/rabbit-models.git",
    "webpage-components @ git+https://github.com/la-catalog/webpage-components.git",
]

[project.urls]
repository = "https://github.com/la-catalog/webpage-scraper"

[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
isort = "python -m isort -v --ac ."

[tool.pdm.dev-dependencies]
lint = [
    "black",
    "isort"
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

# [[tool.pdm.source]]
# url = "https://private-site.org/pypi/simple"
# verify_ssl = false
# name = "lacatalog"