[project]
name = "webpage-scraper"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "thiagola92", email = "thiagola92@gmail.com"},
]
dependencies = [
    "structlog==22.1.0",
    "page-infra==0.1.0",
    "rabbit-models==0.1.0",
    "webpage-components==0.1.0",
    "pika==1.3.1",
    "streamlit==1.13.0",
]

[project.urls]
repository = "https://github.com/la-catalog/webpage-scraper"

[project.optional-dependencies]
[tool.pdm]

[tool.pdm.scripts]
unittest = "python -m unittest discover -v -f -s tests"
black = "python -m black ."
isort = "python -m isort -v --ac --profile black ."

[tool.pdm.dev-dependencies]
lint = [
    "black==22.12.0",
    "isort==5.12.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[[tool.pdm.source]]
url = "https://la-catalog.github.io/pypi/simple/"
name = "la-catalog"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
name = "pypi"

[tool.pdm.resolution]
respect-source-order = true
